# Command-Line-Expanded

./: README.md  cl.bat  pyproject.toml  script.py
cl/: __init__.py  __main__.py  config.py  config.toml  constants.py  dev_utils.py  environment.py  intake.py  parser_args.py  path_collapse.py  pre_process_command.py  process_command.py  shell.py  shorthand.py  substitutions.json  win_commands.py
cl/commands/: _command.py  gather.py  get.py  install.py  list.py  register.py  set.py
