[project]
name = "cl"
dynamic = ["version"]
description = "Custom command line shell"
authors = [
    { name = "Havsalt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = [
    "actus~=0.5.0",
    "colex~=0.1.0",
    "strox~=0.1.0",
    "rich==13.7.1",
    "toml==0.10.2",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[project.scripts]
main = "script:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "cl/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cl"]
